--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                   <a href="about.html" class="nav-link text-left">About Us</a>
                 </li>
                 <li>
-                  <a href="w/logs/index.html" class="nav-link text-left">Water Vendor</a>
+                  <a href="water/logs/index.html" class="nav-link text-left">Water Vendor</a>
                 </li>
 <li>
-                    <a href="w/loguser/index.html" class="nav-link text-left">Water sources</a>
+                    <a href="water/loguser/index.html" class="nav-link text-left">Water sources</a>
                   </li>
               </ul>                                                                                                                                                                                                                                                                                          </ul>
             </nav>
